--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,75 @@
   color: #61dafb;
 }
 
+.section {
+  margin-top: 20px;
+  margin-bottom: 100px;
+}
+
+.book-card {
+  width: 10rem;
+  border: none;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.book-card img {
+  height: 200px;
+  object-fit: contain;
+}
+
+.book-card-action-btn button {
+  border-radius: 50%;
+  position: absolute;
+  right: -5px;
+  bottom: -5px;
+}
+
+.action-item {
+  padding-left: 5px !important;
+  display: inline-flex !important;
+}
+
+.check-container {
+  width: 16px;
+  height: 16px;
+}
+
+.action-item span {
+  margin-left: 5px;
+}
+
+.search {
+  display: flex;
+  align-items: center;
+}
+
+.search input {
+  height: 60px;
+  text-indent: 45px;
+  border: 2px solid #d6d4d4;
+  box-shadow: 0 0 40px rgba(51, 51, 51, 0.1);
+}
+
+.search input:focus {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.search .fa-arrow-left {
+  position: absolute;
+  top: 23px;
+  left: 16px;
+  color: #c7c7c7;
+  font-size: 20px;
+}
+
+.add-btn {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  border-radius: 50% !important;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
